# qndr

./: Cargo.toml  README.md  delme.md
src/: lib.rs  main.rs  qndr.rs
tests/: allow_alphabets_only.rs  allow_alphanumeric_only.rs  allow_numbers_only.rs  alphabets_with_symbols.rs  alphanumeric_with_symbols.rs  begin_with.rs  begin_with_alphabet.rs  begin_with_alphanumeric.rs  begin_with_number.rs  caps.rs  end_with.rs  end_with_alphabet.rs  end_with_alphanumeric.rs  end_with_number.rs  get_alphabets.rs  get_alphanumeric.rs  get_non_alphabets.rs  get_non_alphanumeric.rs  get_non_numbers.rs  get_numbers.rs  numbers_with_symbols.rs  only_caps.rs
