[package]
name = "qndr"
version = "0.1.0"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "A quick and dirty regex helping tool"

repository = "https://github.com/skillzaa/qndr.git"
homepage = "https://github.com/skillzaa/qndr.git"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
