[package]
name = "qndr"
version = "0.1.1"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "A quick and dirty regex helping tool"

repository = "https://github.com/skillzaa/qndr.git"
homepage = "https://github.com/skillzaa/qndr.git"
documentation = "https://docs.rs/qndr/"

license = "MIT OR Apache-2.0"
readme = "README.md"
doctest = true
[dependencies]
